--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,6 @@
-sky:
+spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    host: localhost
-    port: 3306
-    database: sky_take_out
+    url: jdbc:mysql://localhost:3306/sky_take_out
     username: root
     password: hzh475601
