--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -13,13 +13,16 @@ spring:
       username: ${sky.datasource.username}
       password: ${sky.datasource.password}
 
-mybatis:
-  #mapper配置文件
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.sky.entity
+mybatis-plus:
   configuration:
-    #开启驼峰命名
-    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+# mybatis:
+#   #mapper配置文件
+#   mapper-locations: classpath:mapper/*.xml
+#   type-aliases-package: com.sky.entity
+#   configuration:
+#     #开启驼峰命名
+#     map-underscore-to-camel-case: true
 
 logging:
   level:
