--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
         <module>sky-server</module>
     </modules>
     <properties>
-        <java.version>17</java.version>
-        <mybatis.plus>3.5.3.1</mybatis.plus>
+        <mybatis.spring>2.2.0</mybatis.spring>
         <lombok>1.18.20</lombok>
         <fastjson>1.2.76</fastjson>
         <commons.lang>2.6</commons.lang>
@@ -35,9 +34,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>${mybatis.plus}</version>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.spring}</version>
             </dependency>
 
             <dependency>
