--- a/sky-server/pom.xml
+++ b/sky-server/pom.xml
@@ -47,8 +47,8 @@
         </dependency>
 
         <dependency>
-           <groupId>com.baomidou</groupId>
-           <artifactId>mybatis-plus-boot-starter</artifactId>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
